--- a/src/index.css
+++ b/src/index.css
@@ -8,5 +8,14 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-color: blue;
+  background-color: #06c;
+}
+
+h1 {
+  color: #fff;
+  text-shadow: 2px 2px 4px #000000;
+}
+
+.app.container {
+  padding: 5rem;
 }
